--- a/help/02-03_dataType_String.ipynb
+++ b/help/02-03_dataType_String.ipynb
@@ -22,7 +22,7 @@
     "| -------------- | --------------------------------------------------------------------------------------------- |\n",
     "| capitalize()   | Converts the first character to upper case                                                    |\n",
     "| casefold()     | Converts string into lower case                                                               |\n",
-    "| center()       | Returns a centered string                                                                     |\n",
+    "| center()       | Returns a centered string (padding)                                                           |\n",
     "| count()        | Returns the number of times a specified value occurs in a string                              |\n",
     "| encode()       | Returns an encoded version of the string                                                      |\n",
     "| endswith()     | Returns true if the string ends with the specified value                                      |\n",
@@ -43,7 +43,7 @@
     "| istitle()      | Returns True if the string follows the rules of a title                                       |\n",
     "| isupper()      | Returns True if all characters in the string are upper case                                   |\n",
     "| join()         | Joins the elements of an iterable to the end of the string                                    |\n",
-    "| ljust()        | Returns a left justified version of the string                                                |\n",
+    "| ljust()        | Returns a left justified version of the string (padding)                                      |\n",
     "| lower()        | Converts a string into lower case                                                             |\n",
     "| lstrip()       | Returns a left trim version of the string                                                     |\n",
     "| maketrans()    | Returns a translation table to be used in translations                                        |\n",
@@ -51,7 +51,7 @@
     "| replace()      | Returns a string where a specified value is replaced with a specified value                   |\n",
     "| rfind()        | Searches the string for a specified value and returns the last position of where it was found |\n",
     "| rindex()       | Searches the string for a specified value and returns the last position of where it was found |\n",
-    "| rjust()        | Returns a right justified version of the string                                               |\n",
+    "| rjust()        | Returns a right justified version of the string (padding)                                     |\n",
     "| rpartition()   | Returns a tuple where the string is parted into three parts                                   |\n",
     "| rsplit()       | Splits the string at the specified separator, and returns a list                              |\n",
     "| rstrip()       | Returns a right trim version of the string                                                    |\n",
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,12 @@
       "Texto padding:|test-----------|\n",
       "Texto padding:|-----------test|\n",
       "Texto padding:|-----test------|\n",
-      "Texto padding:|     test      |\n"
+      "Texto padding:|     test      |\n",
+      "\n",
+      "test-----------\n",
+      "-----------test\n",
+      "------test-----\n",
+      "      test     \n"
      ]
     }
    ],
@@ -495,7 +500,14 @@
     "print(f'Texto padding:|{var:-<15}|')\n",
     "print(f'Texto padding:|{var:->15}|')\n",
     "print(f'Texto padding:|{var:-^15}|')\n",
-    "print(f'Texto padding:|{var:^15}|')"
+    "print(f'Texto padding:|{var:^15}|')\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "print(var.ljust(15, '-'))\n",
+    "print(var.rjust(15, '-'))\n",
+    "print(var.center(15, '-'))\n",
+    "print(var.center(15))"
    ]
   },
   {
@@ -557,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4rc1"
   },
   "orig_nbformat": 4,
   "vscode": {
