Estatistica test unit 3

--- a/puc/3-Estatística Geral-Teoria e Aplicações/Unit 2/04-Modelos probabilísticos  para variáveis aleatórias contínuas.ipynb
+++ b/puc/3-Estatística Geral-Teoria e Aplicações/Unit 2/04-Modelos probabilísticos  para variáveis aleatórias contínuas.ipynb
@@ -73,9 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3934693402873666"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x=4000\n",
     "alfa = 8000.0  # Taxa (λ)\n",
@@ -89,16 +100,6 @@
     "    prob = np.log(prob)\n",
     "\n",
     "prob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# P(0<X<x)\n",
-    "# =DISTR.EXPON([x];[alfa];VERDADEIRO) # Excel"
    ]
   },
   {
@@ -118,9 +119,10 @@
     }
    ],
    "source": [
-    "# P(0<X<=x)\n",
+    "# P(0<=X<=x) = P(X<=x) = P(X<x)\n",
+    "# =DISTR.EXPON([x];[alfa];VERDADEIRO) # Excel\n",
     "# pexp(x,rate=alfa,lower.tail=TRUE,log.p=FALSE)  # R\n",
-    "expon.cdf(x, scale=alfa)\n"
+    "expon.cdf(x, scale=alfa)"
    ]
   },
   {
@@ -140,30 +142,105 @@
     }
    ],
    "source": [
-    "# P(X>x)\n",
+    "# P(0>X>x) = P(X>x)\n",
     "# pexp(x,rate=alfa,lower.tail=FALSE,log.p=FALSE)  # R\n",
-    "1 - expon.cdf(x, scale=alfa)"
+    "expon.sf(x, scale=alfa)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distribuição Normal\n",
+    "\n",
+    "A distribuição normal conhecida também como distribuição gaussiana é sem dúvida a \n",
+    "mais importante distribuição contínua.\n",
+    "Sua importância se deve a vários fatores, entre eles podemos citar o Teorema Central \n",
+    "do Limite, o qual é um resultado fundamental em aplicações práticas e teóricas, pois \n",
+    "ele garante que mesmo que os dados não sejam distribuídos segundo uma normal a \n",
+    "média dos dados converge para uma distribuição normal conforme o número de dados \n",
+    "aumenta.\n",
+    "\n",
+    "O requisito mínimo para adotarmos o modelo normal para um conjunto de dados \n",
+    "contínuos é que seu histograma seja aproximadamente simétrico em torno do ponto \n",
+    "central, que também deve ser o ponto de máximo.\n",
+    "\n",
+    "**Definição**: A variável aleatória X, que tome todos os valores reais $-\\infin < \\mu < +\\infin$, tem \n",
+    "uma distribuição normal (ou gaussiana) se sua função densidade de probabilidade \n",
+    "(f.d.p.) for da forma:\n",
+    "\n",
+    "$$\n",
+    "f(x)=\\frac{1}{\\sigma \\sqrt{2 \\pi}} e^{\\frac{-(x-\\mu)^2}{2\\sigma^2}}, -\\infin < x < +\\infin\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Os parâmetros da distribuição normal são a média e a variância, onde $-\\infin < \\mu < +\\infin$ e \n",
+    "$\\sigma > 0$. Utilizaremos a notação $X \\sim N (\\mu, \\sigma^2)$ para representar que a v. a. X tem \n",
+    "distribuição Normal com parâmetros $\\mu$ e $\\sgma^2$\n",
+    "2\n",
+    ".\n",
+    "Quando  e \n",
+    "2 são desconhecidos (caso mais comum), estes valores serão \n",
+    "estimados por 𝑥̅e s2\n",
+    ", respectivamente, a partir da amostra.\n",
+    "A Figura 2 mostra a função densidade de probabilidade de uma v. a. com distribuição \n",
+    "normal:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7.581633246407918e-05"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# expon.sf(x, scale=alfa)\n",
-    "expon.pdf(x, scale=alfa)\n"
+    "from scipy.stats import norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=0\n",
+    "m=0\n",
+    "s=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# P(X<=x)\n",
+    "# =DIST.NORM.N([x];[media];[desvio];VERDADEIRO)\n",
+    "# pnorm(x,m,s,lower.tail=TRUE) # m=média, s=desvio padrão\n",
+    "p=morm.cdf(x,m,s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# P(X>x)\n",
+    "# =1-DIST.NORM.N([x];[media];[desvio];VERDADEIRO)\n",
+    "# pnorm(x,m,s,lower.tail=FALSE) # m=média, s=desvio padrão\n",
+    "morm.sf(x,m,s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inversa P(X<=x)\n",
+    "# INV.NORM.N([probabilidade];[media];[desvio])\n",
+    "# qnorm(p,m,s,lower.tail=TRUE)\n",
+    "norm.ppf(p,m,s)"
    ]
   }
  ],
