--- a/help/08_docstring/02_docstring.ipynb
+++ b/help/08_docstring/02_docstring.ipynb
@@ -243,32 +243,12 @@
     "    return a * b\n",
     "```\n",
     "\n",
-    "---\n",
-    "\n",
     "## Resumo Rápido\n",
     "\n",
-    "✅ **Docstrings são usadas para documentar código.**  \n",
-    "✅ **Podem ser acessadas com `help()` e `__doc__`.**  \n",
-    "✅ **Seguem convenções do PEP 257.**  \n",
-    "✅ **Ferramentas como Sphinx usam docstrings para gerar documentação automática.**  \n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Conclusão\n",
-    "\n",
-    "Usar **docstrings** corretamente melhora a legibilidade e manutenção do código, além de facilitar a documentação para outros desenvolvedores. Sempre documente suas funções, classes e módulos! 📚✨  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"This is the example module.\n",
-    "\n",
-    "This module does stuff.\n",
-    "\"\"\""
+    "- **Docstrings são usadas para documentar código.**\n",
+    "- **Podem ser acessadas com `help()` e `__doc__`.**\n",
+    "- **Seguem convenções do PEP 257.** <https://peps.python.org/pep-0257/>\n",
+    "- **Ferramentas como Sphinx usam docstrings para gerar documentação automática.**\n"
    ]
   }
  ],
