--- a/help/92_jupiter/01_magic_commands.ipynb
+++ b/help/92_jupiter/01_magic_commands.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comandos Mágicos\n",
+    "# Comandos Mágicos do Júpiter\n",
     "\n",
     "<https://ipython.readthedocs.io/en/stable/interactive/magics.html>"
    ]
@@ -13,8 +13,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Júpiter\n",
-    "\n",
     "%timeit <command>: Performance\n",
     "%matplotlib inline: Plot graphs"
    ]
