--- a/help/02_DataType/04_dataType_String.ipynb
+++ b/help/02_DataType/04_dataType_String.ipynb
@@ -476,17 +476,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Texto padding:|test-----------|\n",
-      "Texto padding:|-----------test|\n",
-      "Texto padding:|-----test------|\n",
-      "Texto padding:|     test      |\n",
+      "Left padding  (-):|test-----------|\n",
+      "Right padding (-):|-----------test|\n",
+      "Center padding(-):|-----test------|\n",
+      "Center padding( ):|     test      |\n",
       "\n",
       "test-----------\n",
       "-----------test\n",
@@ -497,10 +497,10 @@
    ],
    "source": [
     "var='test'\n",
-    "print(f'Texto padding:|{var:-<15}|')\n",
-    "print(f'Texto padding:|{var:->15}|')\n",
-    "print(f'Texto padding:|{var:-^15}|')\n",
-    "print(f'Texto padding:|{var:^15}|')\n",
+    "print(f'Left padding  (-):|{var:-<15}|')\n",
+    "print(f'Right padding (-):|{var:->15}|')\n",
+    "print(f'Center padding(-):|{var:-^15}|')\n",
+    "print(f'Center padding( ):|{var:^15}|')\n",
     "\n",
     "print()\n",
     "\n",
@@ -555,7 +555,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4rc1 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -569,14 +569,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4rc1"
+   "version": "3.10.11"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "5109d816b82be14675a6b11f8e0f0d2e80f029176ed3710d54e125caa8520dfd"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
