--- a/help/04_Statments/01_try_exceptions.ipynb
+++ b/help/04_Statments/01_try_exceptions.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exceptions"
+    "# Exceptions\n",
+    "\n",
+    "`try`, `except`, `finally` → Tratamento de exceções"
    ]
   },
   {
