--- a/help/07_class/03_decorators.ipynb
+++ b/help/07_class/03_decorators.ipynb
@@ -20,15 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chamando o método meu_metodo\n",
-      "Valor recebido: 10\n"
+      "Chamando o método meu_metodo1\n",
+      "Valor recebido: 10\n",
+      "Texto personalizado meu_metodo2\n",
+      "Valor recebido: 11\n"
      ]
     }
    ],
@@ -39,13 +41,25 @@
     "        return func(self, *args, **kwargs)\n",
     "    return wrapper\n",
     "\n",
+    "def decorator_metodo_arg(text):\n",
+    "    def decorator(func):\n",
+    "        def wrapper(self, *args, **kwargs):\n",
+    "            print(f\"{text} {func.__name__}\")\n",
+    "            return func(self, *args, **kwargs)\n",
+    "        return wrapper\n",
+    "    return decorator\n",
+    "\n",
     "class MinhaClasse:\n",
     "    @decorator_metodo\n",
-    "    def meu_metodo(self, valor):\n",
+    "    def meu_metodo1(self, valor):\n",
+    "        print(f\"Valor recebido: {valor}\")\n",
+    "    @decorator_metodo_arg('Texto personalizado')\n",
+    "    def meu_metodo2(self, valor):\n",
     "        print(f\"Valor recebido: {valor}\")\n",
     "\n",
     "obj = MinhaClasse()\n",
-    "obj.meu_metodo(10)"
+    "obj.meu_metodo1(10)\n",
+    "obj.meu_metodo2(11)"
    ]
   },
   {
