--- a/help/02_DataType/05_dataType_Array.ipynb
+++ b/help/02_DataType/05_dataType_Array.ipynb
@@ -842,13 +842,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "thislist = [\"apple\", \"banana\", \"cherry\", \"apple\", \"banana\", \"cherry\"]\n",
     "thislist.remove(\"banana\")\n",
     "del thislist[1]  # Remove the second item. same unset php\n",
+    "thislist.pop(0)  # Remove the first item\n",
     "thislist.pop(1)  # Remove the second item\n",
     "thislist.pop(-1)  # Remove last item\n",
     "thislist.pop()  # Remove last item\n",
@@ -1127,7 +1128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1141,14 +1142,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.11"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
