--- a/help/07_class/02_dunders_magic_methods.ipynb
+++ b/help/07_class/02_dunders_magic_methods.ipynb
@@ -448,7 +448,7 @@
     "    def __lshift__(self, other): return self.myVal << other\n",
     "    def __rlshift__(self, other): return self.myVal >> other\n",
     "    # def __xor__(self): return self.myVal ^ other\n",
-    "    def __invert__(self): return ~self.myVal\n",
+    "    def __invert__(self): return ~self.myVal # type: ignore\n",
     "    def __ilshift__(self, other): self.myVal <<= other\n",
     "    def __irshift__(self, other): self.myVal >>= other\n",
     "    def __iand__(self, other): self.myVal &= other\n",
