--- a/help/02_DataType/01_dataType_.ipynb
+++ b/help/02_DataType/01_dataType_.ipynb
@@ -31,6 +31,7 @@
     "- float: Ponto Flutuante\n",
     "- bool: Booleano\n",
     "- str: String\n",
+    "- bytes: Sequência de bytes\tdados\n",
     "\n",
     "## Derivados\n",
     "\n",
