--- a/help/03_Conceitos/01_operators/07_Subsets.ipynb
+++ b/help/03_Conceitos/01_operators/07_Subsets.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Outros Operadores\n",
+    "# Sub Conjuntos (subsets)\n",
     "\n",
     "| Type       | Operator | Name                         | Example               | Same as    |\n",
     "| ---------- | -------- | ---------------------------- | --------------------- | ---------- |\n",
