--- a/help/07_class/01_defining.ipynb
+++ b/help/07_class/01_defining.ipynb
@@ -18,12 +18,13 @@
     "2. **Objeto**: Instância de uma classe.\n",
     "3. **Atributo**: Dados armazenados em um objeto.\n",
     "4. **Método**: Função dentro da classe que define comportamentos.\n",
-    "5. **Visibilidade**: Define o nível de acesso a atributos e métodos dentro de uma classe.\n",
-    "6. **Encapsulamento**: Restringe o acesso direto aos dados internos.\n",
-    "7. **Herança**: Permite que uma classe reutilize características de outra.\n",
-    "8. **Polimorfismo**: Objetos de diferentes classes podem ser tratados de forma unificada.\n",
-    "9. **Abstração**: Oculta detalhes internos e expõe apenas o necessário.\n",
-    "10. **Interface**: Define um conjunto de métodos obrigatórios.\n"
+    "5. **Escopo**: Instância, classe e estáticos\n",
+    "6. **Visibilidade**: Define o nível de acesso a atributos e métodos dentro de uma classe.\n",
+    "7. **Encapsulamento**: Restringe o acesso direto aos dados internos.\n",
+    "8. **Herança**: Permite que uma classe reutilize características de outra.\n",
+    "9. **Polimorfismo**: Objetos de diferentes classes podem ser tratados de forma unificada.\n",
+    "10. **Abstração**: Oculta detalhes internos e expõe apenas o necessário.\n",
+    "11. **Interface**: Define um conjunto de métodos obrigatórios.\n"
    ]
   },
   {
@@ -154,7 +155,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Visibilidade\n",
+    "## 5. Escopo\n",
+    "\n",
+    "No Python, existem três tipos principais de escopo para métodos e atributos em uma classe:  \n",
+    "\n",
+    "1. **Instância**: `instance methods`\n",
+    "2. **Classe**: `class methods`\n",
+    "3. **Estáticos**: `static methods`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Escopo de Instância\n",
+    "\n",
+    "- São os mais comuns.\n",
+    "- Métodos recebem automaticamente a instância do objeto como primeiro argumento `self` para acessar e modificar atributos da instância e chamar outros métodos.\n",
+    "- Depende de uma instância para ser chamado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Carro:\n",
+    "    def __init__(self, modelo):\n",
+    "        self.modelo = modelo  # Atributo da instância\n",
+    "\n",
+    "    def obter_modelo(self):  # Método de instância\n",
+    "        return f\"O modelo do carro é {self.modelo}\"\n",
+    "\n",
+    "\n",
+    "meu_carro = Carro(\"Fusca\") # Instancia um objeto da class Carro\n",
+    "print(meu_carro.obter_modelo())  # Chama o método de instância"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Métodos de Classe\n",
+    "\n",
+    "- Métodos são definidos com o decorador `@classmethod`.\n",
+    "- Métodos recebem a própria classe como primeiro argumento `cls` para acessar a classe e seus atributos.\n",
+    "- Podem modificar atributos da classe compartilhados por todas as instâncias.\n",
+    "- Pode ser chamado tanto pela instância quanto pela própria classe.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Carro:\n",
+    "    quantidade_de_carros = 0  # Atributo da classe\n",
+    "\n",
+    "    def __init__(self, modelo):\n",
+    "        self.modelo = modelo\n",
+    "        Carro.quantidade_de_carros += 1  # Atualiza o atributo da classe\n",
+    "\n",
+    "    @classmethod\n",
+    "    def obter_quantidade_de_carros(cls):  # Método de classe\n",
+    "        return f\"Total de carros criados: {cls.quantidade_de_carros}\"\n",
+    "\n",
+    "c1 = Carro(\"Fusca\")\n",
+    "c2 = Carro(\"Gol\")\n",
+    "print(Carro.obter_quantidade_de_carros())  # Chama o método de classe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Métodos Estáticos\n",
+    "\n",
+    "- São definidos com o decorador `@staticmethod`.\n",
+    "- Não recebem `self` nem `cls`.\n",
+    "- Funcionam como funções normais dentro da classe, mas são organizados dentro dela.\n",
+    "- Apenas executa uma funcionalidade auxiliar.  \n",
+    "- Pode ser chamado diretamente da classe ou da instância.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Carro:\n",
+    "    @staticmethod\n",
+    "    def verificar_combustivel(nivel):\n",
+    "        return \"Nível de combustível OK\" if nivel > 10 else \"Atenção! Pouco combustível\"\n",
+    "\n",
+    "print(Carro.verificar_combustivel(15))  # Pode ser chamado sem instância\n",
+    "print(Carro.verificar_combustivel(5))   # Também pode ser chamado por instâncias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resumo das Diferenças\n",
+    "\n",
+    "| Tipo de Método          | Primeiro Argumento | Pode modificar atributos? | Pode ser chamado pela classe? | Pode ser chamado pela instância? |\n",
+    "| ----------------------- | ------------------ | ------------------------- | ----------------------------- | -------------------------------- |\n",
+    "| **Método de instância** | `self` (instância) | Sim (da instância)        | Não                           | Sim                              |\n",
+    "| **Método de classe**    | `cls` (classe)     | Sim (da classe)           | Sim                           | Sim                              |\n",
+    "| **Método estático**     | Nenhum             | Não                       | Sim                           | Sim                              |\n",
+    "\n",
+    "### Quando usar cada um?\n",
+    "\n",
+    "✅ **Use métodos de instância** quando precisar acessar ou modificar atributos do objeto.  \n",
+    "✅ **Use métodos de classe** quando precisar modificar ou acessar atributos da classe.  \n",
+    "✅ **Use métodos estáticos** quando quiser criar uma função dentro da classe sem precisar acessar atributos da classe ou da instância.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Visibilidade\n",
     "\n",
     "A **visibilidade** define o nível de acesso a atributos e métodos dentro de uma classe. Em Python, não existem modificadores de acesso explícitos como `private`, `protected` e `public` (como em Java ou C++), mas usamos **convenções** com underscores (`_` ou `__`) para indicar a visibilidade.\n",
     "\n",
@@ -249,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Encapsulamento\n",
+    "## 7. Encapsulamento\n",
     "\n",
     "Protege os dados dentro da classe, permitindo o acesso controlado a eles.\n",
     "\n",
@@ -290,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Herança (Inheritance)\n",
+    "## 8. Herança (Inheritance)\n",
     "\n",
     "Permite que uma classe herde atributos e métodos de outra classe, evitando a duplicação de código."
    ]
@@ -352,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Polimorfismo\n",
+    "## 9. Polimorfismo\n",
     "\n",
     "Objetos de diferentes classes podem ser tratados de forma unificada, desde que implementem os mesmos métodos."
    ]
@@ -392,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Abstração\n",
+    "## 10. Abstração\n",
     "\n",
     "Esconde detalhes internos e expõe apenas a interface necessária."
    ]
@@ -432,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Interface\n",
+    "## 11. Interface\n",
     "\n",
     "Define um conjunto de métodos que devem ser implementados por qualquer classe que a utilize."
    ]
