--- a/help/07_class/01_defining.ipynb
+++ b/help/07_class/01_defining.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,9 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O modelo do carro é Fusca\n"
+     ]
+    }
+   ],
    "source": [
     "class Carro:\n",
     "    def __init__(self, modelo):\n",
@@ -189,7 +197,7 @@
     "        return f\"O modelo do carro é {self.modelo}\"\n",
     "\n",
     "\n",
-    "meu_carro = Carro(\"Fusca\") # Instancia um objeto da class Carro\n",
+    "meu_carro = Carro(\"Fusca\")  # Instancia um objeto da class Carro\n",
     "print(meu_carro.obter_modelo())  # Chama o método de instância"
    ]
   },
@@ -207,23 +215,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de carros criados: \n",
+      "- public   : 4\n",
+      "- protected: 4\n",
+      "- private  : 2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "class Carro:\n",
     "    quantidade_de_carros = 0  # Atributo da classe\n",
+    "    _quantidade_de_carros = 0  # Atributo protegido da classe\n",
+    "    __quantidade_de_carros = 0  # Atributo privado da classe\n",
     "\n",
     "    def __init__(self, modelo):\n",
     "        self.modelo = modelo\n",
     "        Carro.quantidade_de_carros += 1  # Atualiza o atributo da classe\n",
+    "        Carro._quantidade_de_carros += 1  # Atualiza o atributo protegido da classe\n",
+    "        Carro.__quantidade_de_carros += 1  # Atualiza o atributo privado da classe\n",
+    "        # self.quantidade_de_carros += 1  # não funciona\n",
     "\n",
     "    @classmethod\n",
     "    def obter_quantidade_de_carros(cls):  # Método de classe\n",
-    "        return f\"Total de carros criados: {cls.quantidade_de_carros}\"\n",
+    "        out = 'Total de carros criados: \\n'\n",
+    "        out += f\"- public   : {cls.quantidade_de_carros}\\n\"\n",
+    "        out += f\"- protected: {cls._quantidade_de_carros}\\n\"\n",
+    "        out += f\"- private  : {cls.__quantidade_de_carros}\\n\"\n",
+    "        return out\n",
+    "\n",
+    "\n",
+    "class MarcaCarro(Carro):\n",
+    "    def __init__(self, modelo):\n",
+    "        self.modelo = modelo\n",
+    "        Carro.quantidade_de_carros += 1  # Atualiza o atributo da classe\n",
+    "        Carro._quantidade_de_carros += 1  # Atualiza o atributo protegido da classe\n",
+    "        # Carro.__quantidade_de_carros += 1  # gera erro\n",
+    "        # self.quantidade_de_carros += 1  # não funciona\n",
+    "        self.add_quant()\n",
+    "\n",
+    "    @classmethod\n",
+    "    def add_quant(cls):  # Método de classe\n",
+    "        cls.quantidade_de_carros += 1  # Não Atualiza\n",
+    "        cls._quantidade_de_carros += 1  # Não Atualiza\n",
+    "\n",
     "\n",
     "c1 = Carro(\"Fusca\")\n",
     "c2 = Carro(\"Gol\")\n",
+    "c3 = MarcaCarro(\"Combi\")\n",
+    "Carro.quantidade_de_carros += 1\n",
+    "\n",
+    "# não gera erro, mas desaconselhável. Usado para classes heradadas\n",
+    "Carro._quantidade_de_carros += 1\n",
+    "\n",
+    "# gera erro\n",
+    "# Carro.__quantidade_de_carros += 1\n",
+    "\n",
     "print(Carro.obter_quantidade_de_carros())  # Chama o método de classe"
    ]
   },
@@ -242,17 +296,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nível de combustível OK\n",
+      "Atenção! Pouco combustível\n"
+     ]
+    }
+   ],
    "source": [
     "class Carro:\n",
     "    @staticmethod\n",
     "    def verificar_combustivel(nivel):\n",
     "        return \"Nível de combustível OK\" if nivel > 10 else \"Atenção! Pouco combustível\"\n",
     "\n",
+    "\n",
     "print(Carro.verificar_combustivel(15))  # Pode ser chamado sem instância\n",
-    "print(Carro.verificar_combustivel(5))   # Também pode ser chamado por instâncias"
+    "# Também pode ser chamado por instâncias\n",
+    "print(Carro.verificar_combustivel(5))"
    ]
   },
   {
@@ -305,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -323,13 +388,15 @@
    "source": [
     "class Carro:\n",
     "    def __init__(self, marca, modelo):\n",
-    "        self.marca = marca # Atributo público\n",
+    "        self.marca = marca  # Atributo público\n",
     "        self._modelo = modelo  # Atributo protegido\n",
     "\n",
     "    def mostrar_marca(self):  # Método público\n",
     "        return f\"Marca: {self.marca}\"\n",
+    "\n",
     "    def _detalhes(self):  # Método protegido\n",
     "        return f\"Marca: {self.marca}, Modelo: {self._modelo}\"\n",
+    "\n",
     "\n",
     "class ContaBancaria:\n",
     "    def __init__(self, saldo):\n",
@@ -340,6 +407,7 @@
     "\n",
     "    def acessar_saldo(self):\n",
     "        return self.__mostrar_saldo()  # Método público acessando método privado\n",
+    "\n",
     "\n",
     "# Uso da classe\n",
     "carro = Carro(\"Honda\", \"Civic\")\n",
@@ -357,7 +425,8 @@
     "# - Pode ser acessado diretamente, mas não deveria ser usado fora da classe ou de suas subclasses\n",
     "# - É uma sugestão para indicar que **não deve ser acessado diretamente**\n",
     "print(carro._modelo)  # ⚠️ Funciona, mas não é recomendado\n",
-    "print(carro._detalhes())  # ⚠️ Pode ser acessado, mas deveria ser usado apenas internamente\n",
+    "# ⚠️ Pode ser acessado, mas deveria ser usado apenas internamente\n",
+    "print(carro._detalhes())\n",
     "\n",
     "# 🔒 Atributos e Métodos Privados (private):\n",
     "#\n",
@@ -366,7 +435,8 @@
     "#\n",
     "# print(conta.__saldo)  # ❌ Erro! Atributo privado não pode ser acessado diretamente\n",
     "# print(conta.__mostrar_saldo())  # ❌ Erro! Método privado não pode ser acessado diretamente\n",
-    "print(conta.acessar_saldo())  # ✅ Método público acessando o privado corretamente"
+    "# ✅ Método público acessando o privado corretamente\n",
+    "print(conta.acessar_saldo())"
    ]
   },
   {
@@ -382,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -443,6 +513,7 @@
     "\n",
     "class Cachorro(Animal):\n",
     "    \"\"\"🐶 `Cachorro` herda de `Animal`, mas sobrescreve `fazer_som()`.\"\"\"\n",
+    "\n",
     "    def fazer_som(self):\n",
     "        return \"Latido\"\n",
     "\n",
@@ -456,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -537,14 +608,17 @@
    "source": [
     "from abc import ABC, abstractmethod\n",
     "\n",
+    "\n",
     "class Veiculo(ABC):\n",
     "    @abstractmethod\n",
     "    def mover(self):\n",
     "        pass\n",
     "\n",
+    "\n",
     "class Carro(Veiculo):\n",
     "    def mover(self):\n",
     "        return \"Carro em movimento\"\n",
+    "\n",
     "\n",
     "meu_carro = Carro()\n",
     "print(meu_carro.mover())  # Saída: Carro em movimento\n",
@@ -563,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -580,9 +654,11 @@
     "    def processar_pagamento(self, valor):\n",
     "        pass\n",
     "\n",
+    "\n",
     "class PagamentoCartao(Pagamento):\n",
     "    def processar_pagamento(self, valor):\n",
     "        return f\"Pagamento de R${valor} feito no cartão\"\n",
+    "\n",
     "\n",
     "cartao = PagamentoCartao()\n",
     "print(cartao.processar_pagamento(100))"
@@ -605,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
